# pamiq-io

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: installation-test.yml  main.yml  pre-commit.yml  test.yml  type-check.yml
demos/: directinput_mouse_output.py  inputtino_keyboard_output.py  inputtino_mouse_output.py  opencv_video_capture_demo.py  opencv_video_input_demo.py  soundcard_audio_input.py
docker/: base.yml
src/game_io/: __init__.py
src/game_io/vision/: __init__.py
src/pamiq_io/: keyboard.py  mouse.py
src/pamiq_io/audio/: __init__.py  audio_capture.py
src/pamiq_io/audio/capture/: __init__.py  base.py  soundcard.py
src/pamiq_io/audio/input/: base.py  soundcard.py
src/pamiq_io/audio/output/: soundcard.py
src/pamiq_io/keyboard/: __init__.py
src/pamiq_io/keyboard/output/: base.py  inputtino.py
src/pamiq_io/mouse/: __init__.py
src/pamiq_io/osc/: __init__.py  input.py
src/pamiq_io/video/: __init__.py
src/pamiq_io/video/input/: opencv.py
src/pamiq_io/vision/: __init__.py  video_capture.py
tests/: test_keyboard.py  test_mouse.py  test_package.py
tests/audio/capture/: test_base.py  test_soundcard.py
tests/audio/input/: test_base.py  test_soundcard.py
tests/audio/output/: soundcard.py
tests/video/input/: test_opencv.py
tests/vision/: test_video_capture.py
tests/vision/capture/: test_base.py  test_opencv.py
tests/vision/input/: test_base.py  test_opencv.py
typings/pydirectinput/: __init__.pyi
typings/soundcard/: pulseaudio.pyi
(+3 files in other folders)
