[project]
name = "game-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Geson-anko", email = "59220704+Geson-anko@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
